--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <form>
         
             <label for="number">Pick a number between 1 and 50:</label>
-            <input name="number" type="text" value="3" id="number">
+            <input name="number" type="number" value="3" id="number" min="1" max="50">
             <label for="submitbutton"></label>
             <input type="submit" value="Submit" name="submitbutton" id="submitbutton">
         </form>
